...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.361">


                <TextView
                    android:id="@+id/textView_personal_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="Add the patient's personal information."
                    android:textSize="18sp"
...
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="Patient ID:"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/input_patientID"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/green_stroke"
                        android:hint="Enter patient id"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp" />
...
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="Email:"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/input_Email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/green_stroke"
                        android:hint="Enter email"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp" />
...
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="Full Name:"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/input_fullName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/green_stroke"
                        android:hint="Enter full name"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp" />
...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/input_Gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

...
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="Address:"
                        android:textSize="15sp" />

                    <AutoCompleteTextView
                        android:id="@+id/input_address"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="Address"
                        android:text="" />

                    <TextView
...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/selectBirthDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Select Date" />

                        <Spinner
                            android:id="@+id/input_Status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1" />

                    </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="Contact No.:"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/input_contactNo"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/green_stroke"
                        android:hint="Enter contact no."
                        android:inputType="phone"
                        android:paddingStart="8dp"
...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/input_course"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1.05" />

                        <Spinner
                            android:id="@+id/input_Year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="0.85" />

                    </LinearLayout>
...
                    android:layout_marginTop="30dp"
                    android:text="Click NEXT to enter Medical History"
                    android:textSize="13sp"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/nextBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="35dp"
...
