<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color">

    <TextView
        android:id="@+id/textview_vital_signs"
        android:layout_width="407dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@drawable/btn_green"
        android:gravity="center"
        android:text="@string/vital_signs"
        android:textColor="@color/lightgreen"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="180dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView_personal_info"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="Add the patient's vital signs."
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Blood Pressure:"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/input_bloodPressure"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/green_stroke"
                    android:hint=" Input here" />

                <TextView
                    android:id="@+id/errorBloodPresure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Blood Pressure is Blank"
                    android:textColor="#FF0000"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="Temperature:"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="0.9"
                        android:text="SpO2:"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/input_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/green_stroke"
                        android:hint=" Input here" />

                    <EditText
                        android:id="@+id/input_spo2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/green_stroke"
                        android:hint=" Input here" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/errorTempreture"
                        android:layout_width="117dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Tempreture is Blank"
                        android:textColor="#FF0000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/errorSp02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Sp02 is Blank"
                        android:textColor="#FF0000"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="Pulse rate:"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="0.54"
                        android:text="Weight (kg):"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/input_pulseRate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/green_stroke"
                        android:hint=" Input here" />

                    <EditText
                        android:id="@+id/input_weight"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/green_stroke"
                        android:hint=" Input here" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/errorPulse"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Pulse rate is Blank"
                        android:textColor="#FF0000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/errorWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Weight is Blank"
                        android:textColor="#FF0000"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="Height (cm):"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="0.85"
                        android:text="BMI:"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/input_height"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/green_stroke"
                        android:hint=" Input here" />

                    <EditText
                        android:id="@+id/input_bmi"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:enabled="false"
                        android:text=" 0"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/green_stroke"  />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/errorHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Height is Blank"
                        android:textColor="#FF0000"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/errorBMI"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="BMI is Blank"
                        android:textColor="#FF0000"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/noteForButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="70dp"
                android:text="click SUBMIT to record information"
                android:textSize="13sp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/green"
                android:text="SUBMIT" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="90dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>