...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/tuborculosis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="tuberculosis" />

                    <CheckBox
                        android:id="@+id/hypertension"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="hypertension" />

                </LinearLayout>
...

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_previous_hospitalization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/green_stroke"
                        android:hint="enter here" />
                </com.google.android.material.textfield.TextInputLayout>

...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_famHist_diabetes"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:text="diabetes mellitus " />

                    <CheckBox
...
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="click UPDATE to update medical history and go to Vital Signs"
                android:textSize="13sp" />

            <Button
                android:id="@+id/nxtButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/green"
...
