<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/viewPatientRecord">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
                        android:text="Year" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView_medical_history"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="Medical History"
                android:textSize="16sp"
...
                </LinearLayout>

            </LinearLayout>


            <TextView
                    android:id="@+id/textView_vital_sign"
                    android:layout_width="278dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:text="Vital Sign"
                    android:textSize="16sp"
...
            </LinearLayout>

            </HorizontalScrollView>


            <TextView
                android:id="@+id/textView_medication"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="Medication"
                android:textSize="16sp"
...
